stashing changes from old repo

--- a/templates/projects/project_upload.html
+++ b/templates/projects/project_upload.html
@@ -78,7 +78,7 @@
                         </div>
                         <div class="checkbox">
                             <label for="">
-                                <input type="radio" name="data"> High level data extending an existing project's study data
+                                <input type="radio" name="data"> High lgit evel data extending an existing project's study data
                             </label>
                         </div>
                         <!--High level data files upload-->
