--- a/templates/projects/project_upload.html
+++ b/templates/projects/project_upload.html
@@ -21,33 +21,33 @@
     <section class="panel panel-default">
         <ul class="nav nav-tabs" role="tablist">
             <li class="active" role="presentation">
-                <a data-target="#project-upload" aria-controls="project-upload" role="tab" data-toggle="collapse">A New Project</a>
+                <a aria-controls="project-upload" role="tab" data-toggle="tab" data-target="#project-info">A New Project</a>
             </li>
             <li role="presentation">
-                <a data-target="#project-upload" aria-controls="project-upload" role="tab" data-toggle="collapse">A New Study for an Existing Project</a>
+                <a aria-controls="project-upload" role="tab" data-toggle="tab" data-target="#study-info">A New Study for an Existing Project</a>
             </li>
         </ul>
         <div class="panel-heading"></div>
         <form action="">
             <div class="panel-body">
-                <section id="project-upload" class="collapse in">
+                <section id="project-info" class="collapse in">
                     <div class="form-group">
                         <label for="project-name">Project Name</label>
                         <input class="form-control" type="text" name="project-name" required>
                     </div>
                     <div class="form-group">
                         <label for="project-description">Project Description (Optional)</label>
-                        <textarea class="form-control" name="project-description" id="" cols="30" rows="10"></textarea>
+                        <textarea class="form-control" name="project-description" cols="30" rows="5"></textarea>
                     </div>
                 </section>
-                <section>
+                <section id="study-info">
                     <div class="form-group">
                         <label for="study-name">Study Name</label>
                         <input class="form-control" type="text" name="study-name" required>
                     </div>
                     <div class="form-group">
                         <label for="study-description">Study Description (Optional)</label>
-                        <textarea class="form-control" name="study-description" id="" cols="30" rows="10"></textarea>
+                        <textarea class="form-control" name="study-description" cols="30" rows="5"></textarea>
                     </div>
                     </section>
                     <section>
@@ -91,4 +91,4 @@
 
 {% endblock %}
 
-{% block js_file %}{% static 'js/base.js' %}{% endblock %}
+{% block js_file %}{% static 'js/data_upload.js' %}{% endblock %}
