Fix Label Click on Data Upload page

--- a/templates/projects/project_upload.html
+++ b/templates/projects/project_upload.html
@@ -31,12 +31,12 @@
             <div class="panel-heading">
                  <section>
                    <div class="checkbox">
-                       <label for="">
+                       <label>
                            <input type="radio" name="upload-type"> A New Project
                        </label>
                    </div>
                     <div class="checkbox">
-                       <label for="">
+                       <label>
                            <input type="radio" name="upload-type"> A New Study for an Existing Project
                        </label>
                    </div>
@@ -67,17 +67,17 @@
                     <div class="form-group">
                         <label for="">Data Upload</label>
                         <div class="checkbox">
-                            <label for="">
+                            <label>
                                 <input type="radio" name="data"> High level data files
                             </label>
                         </div>
                         <div class="checkbox">
-                            <label for="">
+                            <label>
                                 <input type="radio" name="data"> Low level files for API access
                             </label>
                         </div>
                         <div class="checkbox">
-                            <label for="">
+                            <label>
                                 <input type="radio" name="data"> High lgit evel data extending an existing project's study data
                             </label>
                         </div>
