--- a/templates/projects/project_upload.html
+++ b/templates/projects/project_upload.html
@@ -42,7 +42,7 @@
                 </section>
                 <section>
                     <div class="form-group collapse" id="study-info">
-                        <select class="form-control">
+                        <select class="form-control" required>
                             <option value="">-- Select Project --</option>
                             <option value="">Project 1</option>
                         </select>
@@ -106,6 +106,19 @@
                 <button class="btn btn-default" type="submit">Next</button>
             </div>
         </form>
+    </section>
+    <section class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Review Data Fields</h3>
+        </div>
+        <div class="panel-body">
+            <p>Below are all the fields we detected for the selected files. Please verify the field names and data types are correct.</p>
+            <p>Please refer to the <a href="">system data dictionary</a> for proper naming and data type conventions.</p>
+
+        </div>
+        <div class="panel-footer">
+            <button class="btn btn-default"><i class="fa fa-cloud-upload"></i> Upload Data</button>
+        </div>
     </section>
 </div>
 
